tests/baselines/reference/iterableArrayPattern6.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern6.ts(17,8): error TS2322: Type 'Foo[]' is not assignable to type 'string[]'.
  Type 'Foo' is not assignable to type 'string'.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern6.ts (1 errors) ====
    class Bar { x }
    class Foo extends Bar { y }
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var a: Bar, b: string[];
    [a, ...b] = new FooIterator;
           ~
!!! error TS2322: Type '{|Foo|0|}[]' is not assignable to type 'string[]'.
!!! error TS2322:   Type '{|Foo|1|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/conformance/es6/destructuring/iterableArrayPattern6.ts:2:7
!!! annotated symbol 1 tests/cases/conformance/es6/destructuring/iterableArrayPattern6.ts:2:7